--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Run unit tests
         run: go test ./...
 
+      - name: Verify shell completions are up to date
+        run: |
+          ./scripts/generate-completions.sh
+          git diff --exit-code completions
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
