--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,14 @@ jobs:
           cache: true
 
       - name: Run unit tests
-        run: go test ./...
+        run: |
+          packages=$(go list ./... | awk '!/\/test\/e2e$/')
+          if [ -n "$packages" ]; then
+            go test $packages
+          fi
+
+      - name: Run end-to-end tests
+        run: go test ./test/e2e
 
       - name: Verify shell completions are up to date
         run: |
